fix: overflow and semester sorting

--- a/frontend/src/pages/UserSemesters/user_semesters.module.css
+++ b/frontend/src/pages/UserSemesters/user_semesters.module.css
@@ -13,6 +13,7 @@
     align-self: center;
     justify-self: center;
     margin: 0 auto;
+    height: 92%;
 }
 
 .semester_area {
@@ -21,4 +22,5 @@
     padding: 2rem 1rem 2rem 1rem;
     gap: 1rem;
     overflow-y: scroll;
+    max-height: 90%;
 }
